feat(mc): mixin foundation — ServerTickMixin proves mixin attaches on MC 26.1
Phase 2.4 step 1: validate mixin infrastructure on user's actual MC 26.1.1 install
before attempting risky NoiseBasedChunkGenerator hook in Phase 2.5.

Files:
- atlas.mixins.json (required: false, defaultRequire: -1 — failures don't crash mod)
- ServerTickMixin: @Inject(method='tickServer(Ljava/util/function/BooleanSupplier;)V', at=HEAD)
  into MinecraftServer. Increments AtlasMixinStats.TICKS counter, no behaviour change.
- AtlasMixinStats: AtomicLong counters for tick + future noise intercepts
- fabric.mod.json: 'mixins': ['atlas.mixins.json']
- /atlas info now shows 'Mixin (tick): ATTACHED (N ticks)' or 'NOT ATTACHED'

How to verify on user's MC 26.1.1:
1. Drop new jar in mods/, launch
2. Open any singleplayer world
3. Run /atlas info
4. Look at 'Mixin (tick)' line:
   - 'ATTACHED (N ticks)' → mixin works, Phase 2.5 NoiseBasedChunkGenerator
     mixin will be safe to attempt
   - 'NOT ATTACHED' → MinecraftServer.tickServer signature differs in 26.1;
     need to find correct method via WebFetch / experimentation

Phase 2.5 = real mixin into NoiseBasedChunkGenerator's density function evaluation
+ Phase 2.6 = vanilla .mca writer (alongside existing .atr)